# SpiderSense

./: .gitignore  CONTRIBUTING.md  DEMO.md  GAME_SETUP.md  LICENSE  QUICKSTART.md  README.md  START_SERVER.md  UI_IMPROVEMENTS.md  docker-compose.yml  setup.sh  start.sh
.kiro/specs/spider-sense-ai/: .config.kiro  design.md  requirements.md  tasks.md
backend/: Dockerfile  api.py  calibration.py  main.py  models.py  motion_analyzer.py  object_detector.py  object_tracker.py  pyproject.toml  session_store.py  threat_engine.py  websocket_handler.py
backend/tests/: test_integration.py  test_pipeline.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/public/game/: play.html  spiderman-game.js
frontend/public/spidermangame/: spiderman-game.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/game/: layout.tsx  page.tsx
frontend/src/app/menu/: page.tsx
frontend/src/components/: CameraViewport.tsx  ControlPanel.tsx  DirectionalArc.tsx  EventLogPanel.tsx  GamePage.tsx  HUDRoot.tsx  MovieCountdown.tsx  ReplayMode.tsx  Reticle.tsx  SessionSummaryView.tsx  StatusBar.tsx  ThreatRing.tsx  ThreatScoreDisplay.tsx  ThreatTimeline.tsx
frontend/src/components/ui/: animated-menu.tsx  cinematic-landing-hero.tsx  circle-menu.tsx  countdown-number.tsx  image-loading.tsx  multi-type-ripple-buttons.tsx  radial-social-menu.tsx
frontend/src/lib/: wsClient.ts
frontend/src/store/: useSpiderSenseStore.ts
frontend/src/tests/: components.test.tsx  setup.ts  store.test.ts  wsClient.test.ts
frontend/src/types/: index.ts
