[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "main", "api", "models", "motion_analyzer", "object_detector",
    "object_tracker", "threat_engine", "calibration", "session_store",
    "websocket_handler"
]

[project]
name = "spider-sense-ai-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "ultralytics>=8.2",
    "opencv-python-headless>=4.9",
    "pydantic>=2.7",
    "python-multipart>=0.0.9",
    "websockets>=12",
    "aiofiles>=23",
]

[project.optional-dependencies]
test = [
    "hypothesis>=6.100",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
